Bug 76845 - Other: File > Wizards > Web Pages crashes LibreOffice on Windows
Summary: Other: File > Wizards > Web Pages crashes LibreOffice on Windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:5.1.0 target:5.0.1 target:...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-03-31 16:00 UTC by martinsaffron
Modified: 2016-10-25 19:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
test odt file for web page export (10.50 KB, application/vnd.oasis.opendocument.text)
2014-08-17 06:00 UTC, Kevin Suo
Details
backtrace 4.4.4.3 (18.57 KB, text/plain)
2015-07-10 13:53 UTC, Gordo
Details
backtrace 5.1.0.0 (18.06 KB, text/plain)
2015-07-10 13:55 UTC, Gordo
Details
backtrace 5.1.0.0 20150801 (18.08 KB, text/plain)
2015-08-01 17:40 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description martinsaffron 2014-03-31 16:00:08 UTC
Problem description: Finishing the Web Page Wizard crashes LibreOffice 4.2.2.1 running on Windows 8.1.

Steps to reproduce:
1. Select File > Wizards > Web Pages from the Menu bar
2. Proceed through the next 6 steps in any way
3. Select location to publish new web site to a local folder
4. Click Finish

Current behavior: All LibreOffice modules freeze, requiring manual force-close

Expected behavior: Document should be exported as web page
Operating System: Windows 8
Version: 4.2.2.1 release
Comment 1 sophie 2014-04-14 13:56:59 UTC
Hi, here also, I don't reproduce using Version: 4.2.3.3
Build ID: 882f8a0a489bc99a9e60c7905a60226254cb6ff0 Ubuntu 13.10, the website is created in the selected folder - Sophie
Comment 2 Kevin Suo 2014-06-17 09:53:18 UTC
Hi martinsaffron,
I can reproduce the freeze of "File > Wizards > Web Pages" in:
Windows XP SP3,
LibreOffice 4.2.5.2 and 4.3.0.0 beta 2.

I set this to NEW.

@sophie: Did you tested it on linux?

As discussed in IRC, "FirasH" does not reproduce it on openSUSE 13.1, so this may be a windows-only issue.
Comment 3 Kevin Suo 2014-08-17 06:00:50 UTC
Created attachment 104750 [details]
test odt file for web page export

Attached is a simple odt file for web page exporting.
Wizard - Web Pages using this test file freezes libreoffice at the last step.
Comment 4 Gordo 2015-07-10 13:53:41 UTC
Created attachment 117170 [details]
backtrace 4.4.4.3

Can reproduce.

It freezes after finish.  I could get it to crash by going to another open window and closing that.

Windows Vista 64
Version: 4.4.4.3
Build ID: 2c39ebcf046445232b798108aa8a7e7d89552ea8
Comment 5 Gordo 2015-07-10 13:55:02 UTC
Created attachment 117171 [details]
backtrace 5.1.0.0

In master it crashes after adding a file.

Windows Vista 64
Version: 5.1.0.0.alpha1+
Build ID: d3b6f3790953bdfeaeebcd3ba9ec370d94ca4ebf
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-09_00:11:56
Comment 6 Timur 2015-07-10 17:11:48 UTC
4.0 was OK, 4.1.0.4 doesn't run wizard at all, 4.1.6 freezes. So regression.
Comment 7 Julien Nabet 2015-07-16 17:37:23 UTC
Gordo: following http://cgit.freedesktop.org/libreoffice/core/commit/?id=2f0d1a23759c1b973593bfba642d01fb3df3c269, could you give a new try with a more recent build?
Comment 8 Gordo 2015-07-16 18:36:05 UTC
@Julien - I will test as soon as there is a build available.  The lastest win builds are 2015-07-09 (with symbols) and 2015-07-11.
Comment 9 Gordo 2015-07-20 11:55:09 UTC
It still crashes when adding a file as per comment 5.

Windows Vista 64
Version: 5.1.0.0.alpha1+
Build ID: fcdddbd30a8b5cf6a5cc4d2ff28b7d4a20f8ec6b
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-20_05:21:02
Comment 10 Julien Nabet 2015-08-01 17:12:12 UTC
Gordo: I noticed 5.1.0 bt was quite different from the first one and contained a problem with solarmutex with Vista part.
Following http://cgit.freedesktop.org/libreoffice/core/commit/?id=c18f11587d37f285a95447dd8996c8b605732e00, could you please give a new try?
(sorry for asking a second time :-()
Comment 11 Gordo 2015-08-01 17:19:09 UTC
I still get assertion failed crash when I try to add a document.

Windows Vista 64
Version: 5.1.0.0.alpha1+
Build ID: 512b782cf466a19ed77d818fa660e1a0dc74fc35
TinderBox: Win-x86@39, Branch:master, Time: 2015-08-01_00:24:16
Comment 12 Julien Nabet 2015-08-01 17:22:43 UTC
Thank you a lot Gordo for your very quick feedback!

Michael: thought you might be interested in this one since bt from 5.1 shows a pb with SolarMutex and you had fixed a similar problem for tdf#92460 (put in See Also)
Comment 13 Julien Nabet 2015-08-01 17:25:54 UTC
Just thought crash could be due to something else after Michael's fix of tdf#92460.
Gordo: would it be possible you check if bt is similar? (a new one would be useful I suppose)
Comment 14 Gordo 2015-08-01 17:40:27 UTC
Created attachment 117588 [details]
backtrace 5.1.0.0 20150801
Comment 15 Julien Nabet 2015-08-01 17:47:31 UTC
Thank you again Gordo! :-)

Reading http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=482c52e91fe41a52e68827e9bf64a9736427d517, might definitely interest you Michael ;-)
Comment 16 Michael Stahl 2015-08-04 21:58:25 UTC
fixed both the assertion and the Windows-only deadlock on master
Comment 17 Commit Notification 2015-08-04 21:58:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4231274abaec8e45538788bd67261044d7ef4bea

tdf#76845: vcl: main thread does not necessarily have SolarMutex

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2015-08-04 21:58:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62de18ab98289fc80984299f13ad71e4a4452ea3

tdf#76845: wizards: fix Web wizard XSLT deadlock on Windows

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2015-08-05 08:07:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5beb43b3fe989a25234b17dfa5d6ba0f785c5deb&h=libreoffice-5-0

tdf#76845: wizards: fix Web wizard XSLT deadlock on Windows

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2015-08-05 19:04:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=98d33dbe6cdf9bd980b3ef4758610c6a70b7cb9a&h=libreoffice-4-4

tdf#76845: wizards: fix Web wizard XSLT deadlock on Windows

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.