tdf#76845: vcl: main thread does not necessarily have SolarMutex

... at least not if VCLXWindowImpl::OnProcessCallbacks drops it and
calls arbitrary event handlers.

So try to make nested SolarMutexReleaser work in that case (although
poorly).

Change-Id: I1e2a1f4d6f42f826692696f7d92d1c3d71291f39